--- a/index.html
+++ b/index.html
@@ -44,11 +44,10 @@
 
   Scan the QR code to visit Frontend Mentor and take your coding skills to the next level -->
 
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-  </div>
+    Coded by <a href="https://dub.sh/girldocode-git">Girl DoCode</a>.
+  </footer>
 </body>
 
 </html>
